--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <button class="js-taskInputBtn taskInputBtn">Add task</button>
         </div>
 
+        <h1 class="heading">To Do List</h1>
         <div class="js-Tasks Tasks"></div>
 
         <script src="main.js"></script>
