--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
             <input type="text" class="js-taskInput taskInput" placeholder="Task">
             <button class="js-taskInputBtn taskInputBtn">Add task</button>
         </div>
-
-        <h1 class="heading">To Do List</h1>
-        <div class="js-Tasks Tasks"></div>
+    
+        <div class="app-content">
+            <h1 class="heading">To Do List</h1>
+            <div class="js-Tasks Tasks"></div>
+        </div>
         
 
         <script src="main.js"></script>
