(fet) [Multiple Lists] User can have mutiple lists

--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@
 <body>
     <div class="js-sideBar sideBar">
             <p class="sideBarHeader">Lists</p>
-            <div class="lists">
-                <div class="list">
-                    <p>list1</p>
-                </div>
-                <div class="list">
-                    <p>lis2</p>
-                </div>
-                <div class="list">
-                    <p>lis3</p>
-                </div>
-            </div>
+            <div class="lists"></div>
 
 
             <div class="addList">
@@ -49,18 +39,15 @@
                 <button class="js-addTaskConfirm addTaskConfirm">Add Task</button>
             </div>
         </div>
-        
-        
-
 
         <div class="app-content">
-            <div class="heading">
+            <div class="header">
                 <div class="js-burger burger">
                     <div class="burger-row"></div>
                     <div class="burger-row"></div> 
                     <div class="burger-row"></div>
                 </div>
-                <input value="To Do List" type="text" maxlength="15">
+                <input value="To Do List" type="text" maxlength="15" class="js-heading">
             </div>
             <div class="js-Tasks Tasks"></div>
         </div>
