(fet) [Local Storage and Completed tasks archive]

--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
                     <div class="burger-row"></div> 
                     <div class="burger-row"></div>
                 </div>
-                <input value="To Do List" type="text" maxlength="15" class="js-heading">
+                <input value="" type="text" maxlength="15" class="js-heading">
             </div>
+
             <div class="js-Tasks Tasks"></div>
+            
+            <div class="js-completedTasks completedTasks Tasks"></div>
         </div>
         
 
