--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="taskInputDiv">
                 <input type="text" class="js-taskInput taskInput" placeholder="Task">
 
-                <textarea type="text" class="taskInputDesc" placeholder="Description" maxlength="100" rows="10"></textarea>
+                <textarea type="text" class="taskInputDesc js-taskInputDesc" placeholder="Description" maxlength="30" rows="10"></textarea>
             </div>
             <div class="taskInputRow3">
                 
